Fixed login page alignemnt issues on Chrome

--- a/front-end/css/login.css
+++ b/front-end/css/login.css
@@ -40,7 +40,6 @@ form {
 }
 
 input, .input {
-  display: flex;
   width: 100%;
   margin: 10px 0;
   font-size: 1.7em;
